# agent-sync

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install-release.sh  install.sh
skills/agent-sync-resume/: SKILL.md
src/: app.rs  cli.rs  config.rs  daemon.rs  domain.rs  git.rs  hooks.rs  install.rs  main.rs  mcp.rs  storage.rs  update.rs
tests/: two_machine.rs
